# cs415-project3-implementation

./: .flake8  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  sentiment_bet_results.json
dashboard/: README.md  fetch-cache.json  package.json
dashboard/components/: LineChart.js  LineChart3.js
dashboard/dashboard/: package-lock.json
dashboard/pages/: 404.js  docs.js  index.js
game/: hehehegame.html
old_stuff/: all_data_types.py  odds_aggregation.py  odds_games_latest.py  team_before_after_freq.py  team_before_after_sentiment.py  tweets_sentiment.py  twitter_counts.py
old_stuff/json_generators/: odds_freq.py  odds_games.py  reddit_comment_freq_timeseries.py  reddit_comments_timeseries_new.py  reddit_submission_freq_timeseries.py  reddit_submissions_timeseries_new.py  tweet_collected_timeseries_new.py  tweet_freq_timeseries.py  tweet_freq_timeseries_collected.py  tweet_timeseries_collected.py  tweet_timeseries_required.py
src/: aggDiff.py  app.py  app.ts  df_integration.py  fetch_team_df.py  fetch_team_positivity.py  get_games.py  get_odds.py  most_pos_team.py  plot_head_to_head.py  plot_odds.py  plot_team_polarity.py  results.json  sentiment_accuracy.py  sentiment_bet_results.json  teamToEntitlementIds.json  teamToSubreddits.json  team_name_to_label.py  team_name_to_subreddit.py  test.py
src/plotting/: reddit_team_plot.py  teamToEntitlementIds.json  team_name_to_entitlements.py  team_name_to_subreddit.py  twitter_team_plot.py  twitter_team_plot_testing.py
src/schemas/: gamesSchema.ts  oddsSchema.ts
src/util/: fetch_team_df.py  (+4 more)
(+8 files in other folders)
